<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="date">Date</string>
    <string name="done">Done</string>
    <string name="crime_title">Crime Title</string>
    <string name="crime_date">Crime Date</string>
    <string name="need_police_sign">Need Police Sign</string>
    <string name="call_police">Call Police</string>
    <string name="first">First</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="add">Add</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="required_police">Required Police</string>
    <string name="delete">Delete</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <plurals name="subtitle_plural">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_suspect">Choose Suspect</string>
    <string name="send_report">Send Crime Report</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report_via">Send crime report via</string>
    <string name="picker">Picker</string>
    <string name="setDate">Set Date</string>
    <string name="update">Update</string>
    <string name="save">Save</string>

</resources>